# hinaco

./: README.md  biome.json  bun.lockb  next.config.js  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: layout.tsx  page.tsx
src/features/theme/components/: theme-provider.tsx
