[package]
name = "hinaco"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = "1.35.1"
window-shadows = { git = "https://github.com/tauri-apps/window-shadows.git" }

[dependencies.tauri]
version = "1.5.4"
features = [
  "window-set-always-on-top",
  "window-maximize",
  "window-unmaximize",
  "window-minimize",
  "window-start-dragging",
  "window-close",
  "window-show",
  "shell-open",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
